# tanks

./: .clang-format  .dir-locals.el  .gitmodules  CMakeLists.txt  assets.h  conanfile.txt  configure.sh  damageable.h  debug.sh  dependencies.cmake.in  game.cpp  game.h  gameevents.cpp  gameevents.h  gameoverstate.cpp  gameoverstate.h  graphicscomponent.cpp  graphicscomponent.h  hud.cpp  hud.h  main.cpp  pausestate.cpp  pausestate.h  playercomponent.cpp  playercomponent.h  playerinputcomponent.cpp  playerinputcomponent.h  proj.el  projectilephysicscomponent.cpp  projectilephysicscomponent.h  startmenustate.cpp  startmenustate.h  tankphysicscomponent.cpp  tankphysicscomponent.h  tankscenestate.cpp  tankscenestate.h  tanksschema.h  utils.cpp  utils.h
assets/raw/: Sprite-0001.aseprite  demoscene.aseprite  physics.json  physics.pes  physics.txt  tank-destroy.aseprite  tank-olivia-destroy.aseprite  tank.aseprite  tank_olivia.aseprite
jenkins/: Dockerfile  Jenkinsfile
scripts/: debug.sh  run_release.sh  tanks.sh
supportfiles/: CMakeLists.txt  assets.xml  compile_commands.json  scenes.json
supportfiles/res/: assets.xml  scenes.json
